chore: manually syntax highlight to avoid jump from CodeBlockRuntime

--- a/docs/components/Hero.module.css
+++ b/docs/components/Hero.module.css
@@ -75,5 +75,6 @@
 }
 
 .codeBlock pre {
-  padding: 18px 56px 18px 0;
+  padding: 1.25rem;
+  padding-right: 3.5rem;
 }
